1. Exercise Program and Exercise library screen : Clicking submit should show a progress meter so I know the exercise is saving​ - Done 2. Once the exercise has saved, I should be taken back to the Exercise Program list, with the new exercise in the list, and a success message at the top of the screen.​ - Done 3.Exercise Program : Submit button needs to have correct style applied to the text (bold,  white)​ - Done 4. Add Exercise from My Library* (Exercise Program  > Add Exercise > My Library) Webex tab selection showing delete button instead of add and get stuck - Done 5. Clicking on the patient name in the top header should ALWAYS take me back to the patient list (on every screen)​ - Done 6. Added Spinner plugin

--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -10758,6 +10758,14 @@ textarea {
     font-size: 20px;
     line-height: 20px; }
 
+.setExerciseView .main .btn-yellow {
+    background: #F8A938;
+    color: #fff;
+    height: 20px;
+    border-radius: 25px;
+    font-size: 20px;
+    line-height: 20px; }
+
 .addPatient .main {
   padding: 40px 25px; }
 
@@ -10871,6 +10879,7 @@ textarea {
     height: 150px !important; }
   .addExercise .main .btn-yellow {
     margin-top: 30px; }
+
 
 .addAccount section {
   padding: 20px 30px; }
